Update Utils.java
Fix URLDecoder/Streams for Android compatibility